# fake_localization

./: CMakeLists.txt  README.md  package.xml
launch/: fake_localization.launch.py
src/: fake_localization.cpp
